# register-machine-select

./: README.md
auto-clean-add-register-machine_v1/__MACOSX/gpt-register-oss/: ._README.md
auto-clean-add-register-machine_v1/gpt-register-oss/: .gitignore  Dockerfile.backend  README.md  api_server.py  auto_pool_maintainer.py
buffer/: req.txt
clean-scripts/auto-clean-script-go_v0/: README.md  config.yaml  go.sum
clean-scripts/auto-clean-script-go_v0/web/: app.js  index.html  style.css
clean-scripts/clean-script-go_v0/: README.md  config.yaml  go.mod
clean-scripts/clean-script-go_v0/web/: app.js  assets.go  index.html  style.css
clean-scripts/clean-script-py_v0/: app.py  jiaoben.txt  pyproject.toml  scanner.py  scanner.py.txt
register-machine-auto-clean-add_v1/gpt-register-oss/: .dockerignore  config.example.json
register-machine-cnlimiter_v0/: README.md
register-machine-yydsTotempmail.lol_v1/: README.md  chatgpt_register_sentinel.py  config.json
register-machine-yyds_v1/: README.md
v1/register-machine-auto-clean-add_v1/gpt-register-oss/: config.json
v1/register-machine-yydsTotempmail.lol_v1/tempmail.lol_doc/: tmpmail.lol_doc.md
v2/register-machine-auto-clean-add_v2/gpt-register-oss/: dev_services.ps1
v2/register-machine_v2/__MACOSX/: ._codexgen
v2/register-machine_v2/codexgen/: config.json  protocol_keygen.py
v3/gpt-register-oss/: README_v1.md  api_server.py  auto_pool_maintainer.py
v3/register-machine-auto-clean-add_v3/gpt-register-oss/: config.example.json
v4/register-machine-human_v4/: register-machine-human_v4.md
(+35 files in other folders)
