[project]
name = "codex-auth-scanner"
version = "0.1.0"
description = "Codex auth scanner with FastAPI web UI"
readme = "jiaoben.txt"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.0",
    "fastapi>=0.116.0",
    "pydantic>=2.11.0",
    "uvicorn>=0.35.0",
]

[tool.uv]
package = false
